@@ -17,6 +17,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -68,7 +69,7 @@ public class SecurityConfig {
     @Bean
     public  CorsConfigurationSource configuration(){
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("https://anime-html-13pe.vercel.app")); // Replace with your exact frontend origin
+        config.setAllowedOrigins(Arrays.asList("https://anime-html-13pe.vercel.app","*")); // Replace with your exact frontend origin
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Allow common HTTP methods
         config.setAllowedHeaders(List.of("Content-Type", "Authorization", "X-Requested-With")); // Allow necessary headers
         config.setAllowCredentials(true); // Allow sending cookies if needed (be cautious)
